--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,16 @@
-target_url: "http://localhost:8787"
-check_interval: 30
+target_url: "https://robitrepair.com"
+check_interval: 5
 failure_threshold: 3
-wifi_network: "YourWiFiSSID"
+wifi_network: "xfinitywifi"
 actions:
   on_internet_down:
-    - "nmcli device wifi connect YourWiFiSSID"
+    - "nmcli device wifi connect xfinitywifi"
     - "sleep 10"
   on_site_down:
-    - "pm2 restart all"
-    - "cloudflared tunnel restart mytunnel"
+    - "pm2 stop all"
+    - "pm2 start C:\\Users\\carli\\OneDrive\\Desktop\\Documents\\NetBeansProjects\\Robit-Repair\\app.js"
+    - "pm2 start C:\\Users\\carli\\OneDrive\\Desktop\\Documents\\NetBeansProjects\\Chatbot-Automation\\server.js"
+    - "cloudflared tunnel stop robitrepair_tunnel"
+    - "cloudflared tunnel run robitrepair_tunnel"
   on_recovery:
     - "echo '✅ Services recovered successfully.'"
